--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8069
+server.port=xxxx
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/delivery_schema
-spring.datasource.username=springUser
-spring.datasource.password=mishuGoal1!
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:xxxx/xxschemaxx
+spring.datasource.username=xxxxxx
+spring.datasource.password=xxxxxx
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
