--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=xxxx
 spring.jpa.hibernate.ddl-auto=update
-
+spring.datasource.url=jdbc:mysql://xxxxx
+spring.datasource.username=xxxx
+spring.datasource.password=xxxx
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
